--- a/index.html
+++ b/index.html
@@ -6,9 +6,8 @@
       <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <div class="body-content">
         <div class="header">
-            <div class="header-logo">Header Logo</div>
+            <div class="header-logo">Skill Club</div>
             <ul>
               <li><a href="#">Courses</a></li>
               <li><a href="#">About</a></li>
@@ -46,9 +45,8 @@
             </div>
         </div>
         <div class="quote-block">
-            <blockquote><div class="quote-text">Knowledge is power. Information is liberating. Education is the premise of progress, in every society, in every family.</div>
+            <div class="quote-text">Knowledge is power. Information is liberating. Education is the premise of progress, in every society, in every family.</div>
             <div class="quote-author">-Kofi Annan</div>
-            </blockquote>
         </div>
         <div class="join-banner">
             <div class="join-color-box">
@@ -56,10 +54,9 @@
                  <div class="bold-join-text">Join Skill Club!</div>
                  <div class="regular-join-text">Get started with the Skill Club community by signing up today.</div>
                 </div>
-             <div class="right-join"><button>Sign up</button></div>
+             <button class="join-sign-up">Sign up</button>
             </div>
         </div>
-    </div>
     </body>
     <div class="footer">Copyright &copy; Skill Club 2022</div>
 </html>
