added alt text to images

--- a/index.html
+++ b/index.html
@@ -20,25 +20,25 @@
                 <div class="intro-description">Here at Skill Club we are driven to help you build skills through personalized lesson plans, mentor guidance, and access to a vast community of learners.</div>
                 <button class="sign-up">Sign up</button>
             </div>
-         <img src="./images/laptop-gadd9d8dd0_1280.jpg">
+         <img src="./images/laptop-gadd9d8dd0_1280.jpg" alt="Books, smartphone, laptop, and two camera lenses on a desk">
         </div>
         <div class="info-banner">
             <div class="info-banner-text">Choose a course and start your journey.</div>
             <div class="course-content">
                 <div class="image-blurb">
-                    <img src="./images/lilartsy-333oj7zFsdg-unsplash.jpg">
+                    <img src="./images/lilartsy-333oj7zFsdg-unsplash.jpg" alt="Hand holding red pen over opened notebook">
                     <p>writing</p>
                 </div>
                 <div class="image-blurb">
-                    <img src="./images/kevin-gonzalez--NXNaE9lu6w-unsplash.jpg"> 
+                    <img src="./images/kevin-gonzalez--NXNaE9lu6w-unsplash.jpg" alt="A person standing in front of an audience"> 
                     <p>public speaking</p>
                 </div>
                 <div class="image-blurb">
-                    <img src="./images/glenn-carstens-peters-npxXWgQ33ZQ-unsplash.jpg">
+                    <img src="./images/glenn-carstens-peters-npxXWgQ33ZQ-unsplash.jpg" alt="Two hands typing on a laptop">
                     <p>web development</p>
                 </div>
                 <div class="image-blurb">
-                    <img src="./images/emily-bernal-unsplash.jpg">
+                    <img src="./images/emily-bernal-unsplash.jpg" alt="Desk arrangment with plant, Graphic Design Playbook, tablet with logos of graphic design tools displaying, and monitor and keyboard">
                     <p>graphic design</p>
                 </div>
             </div>
